--- a/tup-lc2-votacion-app/css/pages/paso.css
+++ b/tup-lc2-votacion-app/css/pages/paso.css
@@ -40,6 +40,11 @@
     font-family: 'Roboto';
 }
 
+body {
+    background-color: var(--fondo-pantalla);
+
+}
+
 p {
     font-size: 12px;
 
@@ -56,6 +61,10 @@ h2 {
 
 h3 {
     font-size: 18px;
+}
+
+h6 {
+    color: var(--textos);
 }
 
 .logo {
@@ -111,7 +120,7 @@ select:hover {
     text-transform: uppercase;
     border-radius: 15px;
     padding: 5px;
-    margin-top: -3px;
+    margin-top: -5px;
 }
 
 .input-filtrar {
@@ -135,9 +144,9 @@ select:hover {
 }
 
 .boton-informes {
-    border-radius: 20px;
+    border-radius: 30px;
     border: 1px solid white;
-    padding: 7px 20px;
+    padding: 7px 30px;
     margin-top: 20px;
     color: #FFF;
     font-size: 13px;
@@ -155,9 +164,8 @@ select:hover {
 .boton-inicio {
     background-color: var(--gris-claro);
     border-radius: 5px;
-    padding: 7px 30px;
-    color: #FFF;
-    font-size: 15px;
+    padding: 7px 40px;
+    color: white;
     text-transform: uppercase;
     text-align: center;
     transition: color 0.3s;
@@ -193,23 +201,20 @@ main {
 }
 
 .add-informe {
-    display: flex;
-    justify-content: center;
+    align-self: center;
     background-color: var(--gris-claro);
     font-size: 10px;
     padding: 5px;
     border-radius: 5px;
     width: fit-content;
     height: fit-content;
-    justify-content: center;
-    align-items: center;
 }
 
 .add-informe input {
     background-color: transparent;
     outline: none;
     color: white;
-    padding: 5px;
+    padding: 5px 30px;
     cursor: pointer;
     border: none;
     text-transform: uppercase;
@@ -220,9 +225,16 @@ main {
     color: var(--textos);
 }
 
+.vacio {
+    display: flex;
+    width: 300px;
+}
+
 .carteles {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    margin-left: 10%;
 
 }
 
@@ -268,27 +280,35 @@ main {
 
 /*AVANCE 1-12 CABECERA Y PRIMER PARTE DEL MAIN HECHAS*/
 
+.sector-main {
+    width: 100%;
+    margin: 0px;
+    padding: 0%;
+}
 
 .cuadro-agrupacion {
-    margin-top: 20px;
+    margin: 5px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
 }
 
 .recuadro {
-    border-radius: 25px;
+    border-radius: 5px;
     border: 1px var(--borde-Grilla) solid;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-    Padding: 1.8em 0 0 0;
-    text-align: center;
+    margin: 5px 5px;
+    padding: 5px 15px;
+    text-align: start;
     white-space: nowrap;
+    width: 25%;
+    background-color: white;
 }
 
 .titulo-recuadro {
     font-weight: bold;
-    padding: 1.8em 0 0 0;
+    padding: 5px;
     text-align: center;
     white-space: nowrap;
 }
@@ -298,41 +318,249 @@ main {
     height: 325px;
 }
 
-.texto-agrupaciones {
-    font-size: 11px;
-    color: var(--textos);
-    padding: 5px;
-    text-transform: uppercase;
-    font-weight: bold;
-}
 
 .titulo-agrupacion {
-    font-size: 12px;
+    font-size: 15px;
     font-weight: bold;
     border-bottom: 1px solid var(--borde-Grilla);
     margin-bottom: 10px;
 }
 
-.bar {
-    height: 35px;
-    width: var(--bar-value);
-    background-color: var(--bar-color);
+#bar-juntos-por-el-cambio {
+    height: 15px;
+    background-color: var(--grafica-amarillo-claro);
+    width: 100%;
     border-radius: 5px;
     margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
 }
-.sec-titulo{
+
+#bar-juntos-por-el-cambio::before {
+    content: '';
+    position: absolute;
+    width: 38.00%;
+    height: 100%;
+    background-color: var(--grafica-amarillo);
+}
+
+#bar-vamos-corrientes {
+    height: 15px;
+    background-color: var(--grafica-verde-claro);
+    width: 100%;
+    /* Establece el ancho de la barra al 100% */
+    /* Establece el color de fondo de la barra como transparente */
+    border-radius: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+#bar-vamos-corrientes::before {
+    content: '';
+    position: absolute;
+    width: 58.95%;
+    height: 100%;
+    background-color: var(--grafica-verde);
+}
+
+#bar-frente-de-todos {
+    height: 15px;
+    background-color: var(--grafica-celeste-claro);
+    width: 100%;
+    /* Establece el ancho de la barra al 100% */
+    /* Establece el color de fondo de la barra como transparente */
+    border-radius: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+#bar-frente-de-todos::before {
+    content: '';
+    position: absolute;
+    width: 26.64%;
+    height: 100%;
+    background-color: var(--grafica-celeste);
+}
+
+#bar-vamos-con-vos {
+    height: 15px;
+    background-color: rgba(127, 255, 212, 0.3);
+    width: 100%;
+    /* Establece el ancho de la barra al 100% */
+    /* Establece el color de fondo de la barra como transparente */
+    border-radius: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+#bar-vamos-con-vos::before {
+    content: '';
+    position: absolute;
+    width: 2.51%;
+    height: 100%;
+    background-color: rgb(35, 185, 123);
+}
+
+#bar-compromiso-federal {
+    height: 15px;
+    background-color: rgba(0, 0, 255, 0.3);
+    ;
+    width: 100%;
+    /* Establece el ancho de la barra al 100% */
+    /* Establece el color de fondo de la barra como transparente */
+    border-radius: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+#bar-compromiso-federal::before {
+    content: '';
+    position: absolute;
+    width: 1.95%;
+    height: 100%;
+    background-color: blue;
+}
+
+.partido {
+    display: flex;
+    justify-content: space-between;
+    padding: 0% 0px;
+    margin: 0px 0px;
+}
+
+.recuadro:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+}
+
+.recuadro svg {
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-self: center;
 }
+
+/* ULTIMO CUADRO--------------------------------------------------------------------------*/
+/*barra de progreso*/
+
+
+.chart-wrap {
+    --chart-width: 260px;
+    --grid-color: #aaa;
+    --columna-thickness: 25px;
+    --columna-rounded: 3px;
+    --columna-spacing: 10px;
+    font-family: sans-serif;
+    width: var(--chart-width);
+}
+
+.chart-wrap .title {
+    font-weight: bold;
+    padding: 25px 10px;
+    margin-bottom: 20px;
+    white-space: nowrap;
+    font-size: 20px;
+}
+
+/* cuando definimos el gráfico en horizontal, lo giramos 90 grados */
+.chart-wrap.horizontal .grid {
+    transform: rotate(-90deg);
+}
+
+.chart-wrap.horizontal .columna::after {
+    /* giramos las letras para horizontal*/
+    transform: rotate(45deg);
+    padding-top: 0px;
+    display: block;
+}
+
+.chart-wrap .grid {
+    margin-left: 50px;
+    position: relative;
+    padding: 5px 0 5px 0;
+    height: 100%;
+    width: 100%;
+    border-left: 2px solid var(--grid-color);
+    font-size: 10px;
+}
+
+/* posicionamos el % del gráfico*/
+.chart-wrap .grid::before {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: '0%';
+    position: absolute;
+    left: -0.5em;
+    top: -1.5em;
+}
+
+.chart-wrap .grid::after {
+    font-size: 0.8em;
+    font-weight: bold;
+    content: '100%';
+    position: absolute;
+    right: -1.5em;
+    top: -1.5em;
+}
+
+/* giramos las valores de 0% y 100% para horizontal */
+.chart-wrap.horizontal .grid::before,
+.chart-wrap.horizontal .grid::after {
+    transform: rotate(90deg);
+}
+
+.chart-wrap .columna {
+    width: var(--columna-value);
+    height: var(--columna-thickness);
+    margin: var(--columna-spacing) 0;
+    background-color: var(--columna-color);
+    border-radius: 0 var(--columna-rounded) var(--columna-rounded) 0;
+}
+
+.chart-wrap .columna:hover {
+    opacity: 0.7;
+}
+
+.chart-wrap .columna::after {
+    content: attr(data-name);
+    margin-left: 100%;
+    padding: 10px;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.recuadro:nth-child(3){
+    display: flex;
+    justify-content: start;
+    align-items: self-start;
+}
+
+footer{
+    background-color: rgb(59, 59, 59);
+    color: rgb(99, 96, 96);
+    display: flex;
+    padding: 40px;
+}
+
+footer img {
+    height: 40px;
+    width: auto;
+}
+
+
 h3:first-child {
     color: white;
-    background-color: var(--mensaje-usuario-verde); 
-    border-width: 200px;
-    margin-right: 400px;
-    margin-left: 400px;
+    background-color: #28a745; 
+    width: 400px;
+    margin: 20px auto;
+    Padding: 15px;
     Padding: 15px;
     Border-radius: 10px;
-    font-size:20px;
+    font-size:12px;
     font-weight: 200;
     text-align: center;
 
@@ -340,26 +568,27 @@ h3:first-child {
 
 h3:nth-child(2) {
     color: white;
-    background-color: var(--mensaje-usuario-amarillo);
-    border-width: 200px;
-    margin-right: 400px;
-    margin-left: 400px;
+    background-color: #ffc107;
+    width: 400px;
+    margin: 20px auto;
     Padding: 15px;
     Border-radius: 10px;
-    font-size:20px;
+    font-size:12px;
     font-weight: 200;
     text-align: center;
+
 }
 
 h3:nth-child(3) {
     color: white;
-    background-color: var(--mensaje-usuario-rojo);
-    border-width: 200px;
-    margin-right: 400px;
-    margin-left: 400px;
+    background-color: #dc3545;
+    width: 400px;
+    margin: 20px auto;
+    Padding: 15px;
     Padding: 15px;
     Border-radius: 10px;
-    font-size:20px;
+    font-size:12px;
     font-weight: 200;
     text-align: center;
+
 }
